<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Skool360 Admin</string>
    <string name="action_settings">Settings</string>
    <string name="action_example">Example action</string>
    <string-array name="menuoption1">
        <item>Home</item>
    </string-array>
    <string name="Dashboard">DASHBOARD</string>
    <string name="student">STUDENT</string>
    <string name="staff">STAFF</string>
    <string name="account">ACCOUNT</string>
    <string name="transport">TRANSPORT</string>
    <string name="admin">Admin</string>
    <string name="hr_head">Hr Head</string>
    <string name="house_keeping">House Keeping</string>
    <string name="info_tech">Information Technology</string>
    <string name="student_label">Student</string>
    <string name="staff_detail">Staff Detail</string>
    <string name="hr">HR</string>
    <string name="m_sms">SMS</string>
    <string name="other">OTHER</string>
    <string name="my_leave">MY LEAVE</string>
    <string name="student_permission">PERMISSION</string>
    <string name="resultpermission">RESULT PERMISSION</string>
    <string name="attendace">STUDENT ATTENDANCE</string>
    <string name="student_title">STUDENT</string>
    <string name="allDetails">STUDENT DETAILS</string>
    <string name="searchstaff">SEARCH STAFF</string>
    <string name="staffleave">STAFF LEAVE</string>
    <string name="attendencereport">ATTENDENCE REPORT</string>
    <string name="dailyreport">DAILY REPORT</string>
    <string name="standardwiseattendace">Standard Wise Attendance</string>
    <string name="consistent_absent">Consistence Absent Teacher</string>
    <string name="consistent_absent_student">Consistence Absent Student</string>
    <string name="alert_msg">Alert Msg</string>
    <string name="ok">OK</string>
    <string name="attendancesummary">ATTENDANCE SUMMARY</string>
    <string name="studentattendancesummary">STUDENT ATTENDANCE</string>
    <string name="internet_error">Internet Connection !</string>
    <string name="search_student">Search Student</string>
    <string name="internet_connection_error">Admin requires an internet connection.Make sure Wi-Fi or mobile networks are turned on, then try again.</string>
    <string name="something_wrong">Something Wrong</string>
    <string name="blank">Blank Filed Not Allowed</string>
    <string name="false_msg">Record not found</string>
    <string name="true_msg">Send Successfully</string>
    <string name="student_txt"><u>Student</u></string>
    <string name="staff_txt"><u>Staff</u></string>
    <string name="absent">Absent</string>
    <string name="present">Present</string>
    <string name="leave">Leave</string>
    <string name="total">Total</string>
    <string name="total_paid">Total Paid</string>
    <string name="leave_balance">Leave Balance</string>
    <string name="leave_req" tools:ignore="ExtraTranslation">Leave Request</string>
    <string name="onduty">Onduty</string>
    <string name="ondate">On Date</string>
    <string name="send_time">Send Time</string>
    <string name="receive_time">Receive Time</string>
    <string name="resultstatus">Result Status</string>
    <string name="standardname">Standarname</string>
    <string name="standardstatus">Status</string>
    <string name="employeename">Employee</string>
    <string name="employeename_label">Employee Name</string>
    <string name="employeecode_label">Employee Code</string>
    <string name="days">Days</string>
    <string name="searchtype">Parents Name</string>
    <string name="index">Index</string>
    <string name="searchparents">Parents Name</string>
    <string name="searchstudent">Student Name</string>
    <string name="student1">Student</string>
    <string name="grno">GR NO</string>
    <string name="grade">Grade</string>
    <string name="absent_from">Absent From</string>
    <string name="detail">Detail</string>
    <string name="bank_bal">Bank Balance</string>
    <string name="petty_cash">Petty Cash</string>
    <string name="expenses">Expenses</string>
    <string name="fees">Fees</string>
    <string name="fees_rec">Fees Received</string>
    <string name="deposited_bank">Deposited In Bank</string>
    <string name="route_problem">Route Problem</string>
    <string name="driver_complaint">Driver Complaint</string>
    <string name="parent_complaint">Parents Complaint</string>
    <string name="timing_problem">Timing Problem</string>
    <string name="vehicle_problem">Vehicle Problem</string>
    <string name="total_student_strength">Total Strength Of Students</string>
    <string name="new_admission">New Admission</string>
    <string name="withdrawals">Withdrawals</string>
    <string name="student_db_update">Student Database Updating</string>
    <string name="overall_admin">Overall Admin</string>
    <string name="no_of_teacher_present_absent">No. Of Teacher Present/Absent</string>
    <string name="total_num_visitor">Total Number Of Visitors</string>
    <string name="complaints_parents">Any Comaplain of Parents by Phone/Email</string>
    <string name="suggestion_by_parent_teacher">Suggestion By Parent/Teacher</string>
    <string name="admission_inquiry">Admission Enquiry</string>
    <string name="total_new_admission">Total New Admission</string>
    <string name="event_of_the_day">Event Of The  Day</string>
    <string name="fb_update">FB Update</string>
    <string name="major_concern">Major Concern</string>
    <string name="update">Update</string>
    <string name="laptop_issued">Laptop Issued</string>
    <string name="tab_issued">Tablet Issued</string>
    <string name="printing">Printing</string>
    <string name="it">IT</string>
    <string name="other_label">Other</string>
    <string name="grade_section">Grade/Section</string>
    <string name="current_status">Current Status</string>
    <string name="form_no">Form No</string>
    <string name="session">Session</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="hometown">Hometown</string>
    <string name="currently_reside">Currently Residing with</string>
    <string name="previous_school" tools:ignore="ExtraTranslation">Previous School Attended</string>
    <string name="festival_celebrated">Festivals Celebrated at home</string>
    <string name="pagename">Page Name</string>
    <string name="underpagename">Under Page</string>
    <string name="view" tools:ignore="ExtraTranslation"><u>View</u></string>
    <string name="studenttag">Tag</string>
    <string name="firstname">First Name</string>
    <string name="middlename">Middle Name</string>
    <string name="lastname">Last Name</string>
    <string name="dob">Date Of Birth</string>
    <string name="birthplace">Birth Place</string>
    <string name="age">Age</string>
    <string name="gender">Gender</string>
    <string name="aadhar">Aadhaar Card No.</string>
    <string name="studenttype">Student Type</string>
    <string name="acedamic">Academic Year</string>
    <string name="section">Section</string>
    <string name="assign">Assign To</string>
    <string name="lastschool">Last School</string>
    <string name="doa">Date Of Admission</string>
    <string name="doataken">Admission Taken</string>
    <string name="bloodgroup">Blood Group</string>
    <string name="house">House</string>
    <string name="oldgr">Old GRNO</string>
    <string name="religion">Religion</string>
    <string name="nationality">Nationality</string>
    <string name="lang_known">Languages Known</string>
    <string name="contact_office">Contact Office</string>
    <string name="contact_home">Contact Home</string>
    <string name="username">User Name</string>
    <string name="password">Password</string>
    <string name="registration">Registration Date</string>
    <string name="pickup">Pickup Bus</string>
    <string name="pickuppoint">Pickup Point</string>
    <string name="pickuptime">Pickup Point Time</string>
    <string name="dropbus">Drop Bus</string>
    <string name="droppoint">Drop Point</string>
    <string name="droptime">Drop Point Time</string>
    <string name="phone">Phone No.</string>
    <string name="mobile">Mobile No.</string>
    <string name="email">Email Address</string>
    <string name="home_address">Home Address</string>
    <string name="office_address">Office Address</string>
    <string name="qualification">Qualification</string>
    <string name="occupation">Occupation</string>
    <string name="organization">Organization</string>
    <string name="designation">Designation</string>
    <string name="department">Department</string>
    <string name="createby">Created By</string>
    <string name="task">Task</string>
    <string name="taken_label">Taken</string>
    <string name="not_taken_label">Not Taken</string>
    <string name="inoutdetails">In Out Details</string>
    <string name="workinghours">Working Hours</string>
    <string name="sms">SMS No.</string>
    <string name="city">City</string>
    <string name="zipcode">Zip Code</string>
    <string name="address">Address</string>
    <string name="studentdetail">STUDENT DETAILS</string>
    <string name="transportdetail">Transport Detail</string>
    <string name="fatherdetail">Father Detail</string>
    <string name="motherdetail">Mother Detail</string>
    <string name="communication">Communication Detail</string>
    <string name="viewsummary"><u>View Summar</u>y<u> Details >></u></string>
    <string name="select_term_label">Select Term</string>
    <string name="unique_no">Student UniqueId No.</string>
    <string name="class_wise"><u>View Class Wise</u></string>
    <string name="term">Term</string>
    <string name="term_label">Term</string>
    <string name="range_label">Range</string>
    <string name="marks_label">Marks</string>
    <string name="syllabus_label">Syllabus</string>
    <string name="marks_syllabus_label">Marks/Syllabus</string>
    <string name="test_name_label">Test Name</string>
    <string name="due_amount">Due Amount</string>
    <string name="select_date">Select Date</string>
    <string name="route">Route</string>
    <string name="teacher">Teacher</string>
    <string name="teacher_name">Teacher Name</string>
    <string name="user">User\'s</string>
    <string name="classTeacher">Class Teacher</string>
    <string name="pick">Pickup Point</string>
    <string name="routename">Route Name</string>
    <string name="pickuppointname">Pickup Point</string>
    <string name="km">KM</string>
    <string name="mobileno">Mobile No.</string>
    <string name="month">Month</string>
    <string name="year">Year</string>
    <string name="family">Family</string>
    <string name="gradesection">Grade/Section</string>
    <string name="message">Message</string>
    <string name="smsnumber">SMS Number</string>
    <string name="singlesms">SINGLE SMS</string>
    <string name="studenttransport">STUDENT TRANSPORT</string>
    <string name="transportcharge">TRANSPORT CHARHES</string>
    <string name="assignsubject">ASSIGN SUBJECT</string>
    <string name="classteacher">CLASS TEACHER</string>
    <string name="menupermission">MENU PERMISSION</string>
    <string name="employeesms">STAFF SMS</string>
    <string name="bulksms">STUDENT BULK SMS</string>
    <string name="studenttrasportsms">STUDENT TRASPORT SMS</string>
    <string name="appsms">APP SMS</string>
    <string name="grregister">NEW REGISTER</string>
    <string name="attendance">ATTENDANCE</string>
    <string name="type">Type</string>
    <string name="status">Status</string>
    <string name="date">Date</string>
    <string name="name">Name</string>
    <string name="subject">Subject</string>
    <string name="collection_label">Collection</string>
    <string name="academicyear">Academic Year</string>
    <string name="edit">Edit</string>
    <string name="description">Description</string>
    <string name="order">Order</string>
    <string name="student_name_label">Student Name</string>
    <string name="code">Code</string>
</resources>