<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/llHeader"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/box_blue"
    android:gravity="center"
    android:orientation="horizontal"
    android:paddingBottom="@dimen/_8sdp"
    android:paddingLeft="@dimen/_2sdp"
    android:paddingRight="@dimen/_2sdp"
    android:paddingTop="@dimen/_8sdp"
    android:visibility="visible">

    <TextView
        android:id="@+id/index_txt"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="0.1"
        android:gravity="center"
        android:text="@string/index"
        android:textColor="@color/app_bg"
        android:textSize="@dimen/_11sdp" />

    <TextView
        android:id="@+id/firstname_txt"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="0.2"
        android:gravity="center"
        android:text="@string/firstname"
        android:textColor="@color/app_bg"
        android:textSize="@dimen/_11sdp" />

    <TextView
        android:id="@+id/firstname1_txt"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="0.4"
        android:gravity="center"
        android:text="@string/student_name_label"
        android:textColor="@color/app_bg"
        android:textSize="@dimen/_11sdp"
        android:visibility="gone" />

    <TextView
        android:id="@+id/lastname_txt"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="0.2"
        android:gravity="center"
        android:text="@string/lastname"
        android:textColor="@color/app_bg"
        android:textSize="@dimen/_11sdp" />

    <TextView
        android:id="@+id/grnno_txt"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="0.15"
        android:gravity="center"
        android:text="@string/grno"
        android:textColor="@color/app_bg"
        android:textSize="@dimen/_11sdp" />

    <TextView
        android:id="@+id/grade_txt"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="0.15"
        android:gravity="center"
        android:text="@string/grade"
        android:textColor="@color/app_bg"
        android:textSize="@dimen/_11sdp" />

    <TextView
        android:id="@+id/view_txt"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="0.1"
        android:gravity="center"
        android:text="@string/view"
        android:textColor="@color/app_bg"
        android:textSize="@dimen/_11sdp" />

</LinearLayout>