<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/llHeader"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/box_blue"
    android:gravity="center"
    android:orientation="horizontal"
    android:padding="@dimen/_2sdp"
    android:visibility="visible"
    android:weightSum="1">

    <TextView
        android:id="@+id/index_txt"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="0.14"
        android:gravity="center"
        android:text="@string/term_label"
        android:textColor="@color/app_bg"
        android:textSize="@dimen/_10sdp" />

    <TextView
        android:id="@+id/academicyear_txt"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="0.2"
        android:gravity="center"
        android:text="@string/type"
        android:textColor="@color/app_bg"
        android:textSize="@dimen/_10sdp" />

    <TextView
        android:id="@+id/grade_txt"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="0.15"
        android:gravity="center"
        android:text="@string/grade"
        android:textColor="@color/app_bg"
        android:textSize="@dimen/_10sdp" />

    <TextView
        android:id="@+id/resultstatus_txt"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="0.2"
        android:gravity="center"
        android:text="@string/test_name_label"
        android:textColor="@color/app_bg"
        android:textSize="@dimen/_10sdp" />

    <TextView
        android:id="@+id/tv_result_status"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="0.2"
        android:gravity="center"
        android:text="@string/resultstatus"
        android:textColor="@color/app_bg"
        android:textSize="@dimen/_10sdp" />

    <TextView
        android:id="@+id/tv_edt"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="0.1"
        android:gravity="center"
        android:text="@string/edit"
        android:textColor="@color/app_bg"
        android:textSize="@dimen/_10sdp" />
</LinearLayout>