<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/llHeader"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/box_blue"
    android:gravity="center"
    android:orientation="horizontal"
    android:paddingLeft="@dimen/_2sdp"
    android:paddingRight="@dimen/_2sdp"
    android:visibility="visible"
    android:weightSum="1">

    <TextView
        android:id="@+id/index_txt"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="0.1"
        android:gravity="center"
        android:text="@string/index"
        android:textColor="@color/app_bg"
        android:textSize="@dimen/_11sdp" />

    <TextView
        android:id="@+id/studentname_txt"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="0.25"
        android:gravity="center"
        android:padding="@dimen/_3sdp"
        android:text="@string/searchstudent"
        android:textColor="@color/app_bg"
        android:textSize="@dimen/_11sdp" />

    <TextView
        android:id="@+id/Standard_txt"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="0.15"
        android:gravity="center"
        android:text="@string/grade"
        android:textColor="@color/app_bg"
        android:textSize="@dimen/_11sdp" />

    <TextView
        android:id="@+id/gender_txt"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="0.2"
        android:gravity="center"
        android:text="@string/gender"
        android:textColor="@color/app_bg"
        android:textSize="@dimen/_11sdp" />

    <TextView
        android:id="@+id/status_txt"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="0.2"
        android:gravity="center"
        android:text="@string/status"
        android:textColor="@color/app_bg"
        android:textSize="@dimen/_11sdp" />

    <TextView
        android:id="@+id/view_txt"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="0.1"
        android:gravity="center"
        android:text="@string/view"
        android:textColor="@color/app_bg"
        android:textSize="@dimen/_11sdp" />

</LinearLayout>
