<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/llHeader"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/box_blue"
    android:gravity="center"
    android:orientation="horizontal"
    android:padding="@dimen/_2sdp"
    android:visibility="visible"
    android:weightSum="1">

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="0.1"
        android:gravity="center"
        android:text="@string/index"
        android:textColor="@color/app_bg"
        android:textSize="@dimen/_10sdp" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="0.3"
        android:gravity="center"
        android:text="@string/academicyear"
        android:textColor="@color/app_bg"
        android:textSize="@dimen/_10sdp" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="0.15"
        android:gravity="center"
        android:text="Term\nDetail"
        android:textColor="@color/app_bg"
        android:textSize="@dimen/_10sdp" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="0.15"
        android:gravity="center"
        android:text="@string/grade"
        android:textColor="@color/app_bg"
        android:textSize="@dimen/_10sdp" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="0.2"
        android:gravity="center"
        android:text="@string/resultstatus"
        android:textColor="@color/app_bg"
        android:textSize="@dimen/_10sdp" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="0.1"
        android:gravity="center"
        android:text="@string/edit"
        android:textColor="@color/app_bg"
        android:textSize="@dimen/_10sdp" />
</LinearLayout>
