<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/llHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="1dp"
        android:visibility="visible"
        android:background="@drawable/box_blue">

        <TextView
            android:id="@+id/index_txt"
            android:layout_width="@dimen/_30sdp"
            android:layout_height="@dimen/_31sdp"
            android:text="@string/index"
            android:paddingTop="@dimen/_7sdp"
            android:textAlignment="center"
            android:paddingLeft="@dimen/_2sdp"
            android:textColor="@color/app_bg"
            android:textSize="@dimen/_11sdp" />

        <TextView
            android:id="@+id/date_txt"
            android:layout_width="@dimen/_65sdp"
            android:layout_height="@dimen/_31sdp"
            android:text="@string/date"
            android:paddingTop="@dimen/_7sdp"
            android:textAlignment="center"
            android:paddingLeft="@dimen/_2sdp"
            android:textColor="@color/app_bg"
            android:textSize="@dimen/_11sdp" />
        <TextView
            android:id="@+id/subject_txt"
            android:layout_width="@dimen/_55sdp"
            android:layout_height="@dimen/_31sdp"
            android:text="@string/subject"
            android:paddingTop="@dimen/_7sdp"
            android:textAlignment="center"
            android:paddingLeft="@dimen/_2sdp"
            android:textColor="@color/app_bg"
            android:textSize="@dimen/_11sdp" />
        <TextView
            android:id="@+id/discription_txt"
            android:layout_width="@dimen/_60sdp"
            android:layout_height="@dimen/_31sdp"
            android:text="@string/description"
            android:paddingTop="@dimen/_7sdp"
            android:textAlignment="center"
            android:paddingLeft="@dimen/_2sdp"
            android:textColor="@color/app_bg"
            android:textSize="@dimen/_11sdp" />
        <TextView
            android:id="@+id/order_txt"
            android:layout_width="@dimen/_40sdp"
            android:layout_height="@dimen/_31sdp"
            android:text="@string/order"
            android:paddingTop="@dimen/_7sdp"
            android:textAlignment="textStart"
            android:paddingLeft="@dimen/_2sdp"
            android:textColor="@color/app_bg"
            android:textSize="@dimen/_11sdp" />
        <TextView
            android:id="@+id/status_txt"
            android:layout_width="@dimen/_55sdp"
            android:layout_height="@dimen/_31sdp"
            android:text="@string/status"
            android:paddingTop="@dimen/_7sdp"
            android:textAlignment="textStart"
            android:paddingLeft="@dimen/_2sdp"
            android:textColor="@color/app_bg"
            android:textSize="@dimen/_11sdp" />
    </LinearLayout>
</LinearLayout>