<?xml version="1.0" encoding="utf-8"?>
<layout>
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_37sdp"
        android:orientation="vertical"
        android:background="@drawable/shadow_box">

        <LinearLayout
            android:id="@+id/llHeader"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_33sdp"
            android:orientation="horizontal"
            android:paddingBottom="1dp"
            android:gravity="center"
            android:weightSum="1"
            android:visibility="visible">

            <TextView
                android:id="@+id/index_txt"
                android:layout_width="0dp"
                android:layout_weight="0.1"
                android:layout_height="@dimen/_33sdp"
                android:text="@string/index"
                android:gravity="center"
                android:visibility="gone"
                android:textColor="@color/black"
                android:textSize="@dimen/_10sdp" />

            <TextView
                android:id="@+id/studentname_txt"
                android:layout_width="0dp"
                android:layout_weight="0.32"
                android:layout_height="@dimen/_33sdp"
                android:text="@string/searchstudent"
                android:paddingLeft="@dimen/_5sdp"
                android:gravity="center_vertical|left"
                android:textColor="@color/black"
                android:textSize="@dimen/_10sdp"/>
            <TextView
                android:id="@+id/grnno_txt"
                android:layout_width="0dp"
                android:layout_weight="0.2"
                android:layout_height="@dimen/_33sdp"
                android:text="@string/grno"
                android:gravity="center"
                android:textColor="@color/black"
                android:textSize="@dimen/_10sdp"/>
            <TextView
                android:id="@+id/section_txt"
                android:layout_width="0dp"
                android:layout_weight="0.15"
                android:layout_height="@dimen/_33sdp"
                android:text="@string/section"
                android:gravity="center"
                android:textColor="@color/black"
                android:textSize="@dimen/_10sdp" />

            <TextView
                android:id="@+id/totalPaid_txt"
                android:layout_width="0dp"
                android:layout_weight="0.2"
                android:layout_height="@dimen/_33sdp"
                android:text="@string/total_paid"
                android:gravity="center"
                android:textColor="@color/black"
                android:textSize="@dimen/_10sdp" />
            <TextView
                android:id="@+id/view_txt"
                android:layout_width="0dp"
                android:layout_weight="0.13"
                android:layout_height="@dimen/_33sdp"
                android:text="@string/view"
                android:gravity="center"
                android:textColor="@color/absent"
                android:textSize="@dimen/_10sdp"/>
        </LinearLayout>
    </LinearLayout>
</layout>
