<?xml version="1.0" encoding="utf-8"?>
<layout>
    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="@dimen/_5sdp"
        android:background="@drawable/box_blue">

        <TextView
            android:id="@+id/student_txt"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_3sdp"
            android:layout_weight="1.2"
            android:text="@string/student_label"
            android:layout_gravity="center"
            android:textColor="@color/app_bg"
            android:textAlignment="center"
            android:textSize="@dimen/_10ssp" />

        <TextView
            android:id="@+id/section_txt"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.8"
            android:textColor="@color/app_bg"
            android:text="@string/section"
            android:layout_gravity="center"
            android:textAlignment="center"
            android:textSize="@dimen/_10ssp" />

        <TextView
            android:id="@+id/fees_txt"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.2"
            android:textColor="@color/app_bg"
            android:text="@string/fees"
            android:layout_gravity="center"
            android:textAlignment="center"
            android:textSize="@dimen/_10ssp" />

        <TextView
            android:id="@+id/collection_txt"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.2"
            android:textColor="@color/app_bg"
            android:text="@string/collection_label"
            android:layout_gravity="center"
            android:textAlignment="center"
            android:textSize="@dimen/_10ssp" />

        <TextView
            android:id="@+id/duecollection_txt"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.2"
            android:textColor="@color/app_bg"
            android:text="@string/due_amount"
            android:layout_gravity="center"
            android:textAlignment="center"
            android:textSize="@dimen/_10ssp" />
    </LinearLayout>
</layout>